# pykosinus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/: main.py
pykosinus/: __init__.py  requirements.txt
pykosinus/lib/: __init__.py  cosine_similarity.py  fuzzy_match.py  scoring.py  spellcheck.py
pykosinus/repositories/: scoring.py
